GUI bugfixes - selection of log fields was impossible